--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -1,6 +1,7 @@
 name: Check and Build Docker Image
 
 on:
+  workflow_dispatch:  # Allows manual triggering
   schedule:
     - cron: "0 */6 * * *"  # Runs every 6 hours
 
