--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -17,20 +17,20 @@ jobs:
       id: get_release
       run: |
         latest_release=$(curl -s https://api.github.com/repos/Aldaviva/GandiDynamicDns/releases/latest | jq -r .tag_name)
-        echo "::set-output name=tag::$latest_release"
+        echo "tag=$latest_release" >> $GITHUB_ENV
 
     - name: Check if the release is new
       run: |
-        if [ "${{ secrets.LAST_RELEASE }}" != "${{ steps.get_release.outputs.tag }}" ]; then
-          echo "New release found: ${{ steps.get_release.outputs.tag }}"
-          echo "LAST_RELEASE=${{ steps.get_release.outputs.tag }}" >> $GITHUB_ENV
+        if [ "${{ secrets.LAST_RELEASE }}" != "${{ env.tag }}" ]; then
+          echo "New release found: ${{ env.tag }}"
+          echo "LAST_RELEASE=${{ env.tag }}" >> $GITHUB_ENV
         else
           echo "No new release found"
           exit 0
 
     - name: Build and push Docker image
-      if: env.LAST_RELEASE == steps.get_release.outputs.tag
+      if: env.LAST_RELEASE == env.tag
       run: |
-        docker build -t d0mmi/gandidynamicdns:${{ steps.get_release.outputs.tag }} .
+        docker build -t d0mmi/gandidynamicdns:${{ env.tag }} .
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker push d0mmi/gandidynamicdns:${{ steps.get_release.outputs.tag }}
+        docker push d0mmi/gandidynamicdns:${{ env.tag }}
