--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Check if the release is new
       run: |
-        if [ "${{ secrets.LAST_RELEASE }}" != "${{ env.tag }}" ]; then
+        if [ "${{ vars.LAST_RELEASE }}" != "${{ env.tag }}" ]; then
           echo "New release found: ${{ env.tag }}"
           echo "LAST_RELEASE=${{ env.tag }}" >> $GITHUB_ENV
         else
@@ -37,3 +37,10 @@ jobs:
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
         docker push d0mmi/gandidynamicdns:${{ env.tag }}
         docker push d0mmi/gandidynamicdns:latest
+    
+    - name: Update LAST_RELEASE variable
+      if: env.LAST_RELEASE == env.tag
+      run: |
+        gh api -X PATCH /repos/${{ github.repository }}/actions/variables/LAST_RELEASE -f name=LAST_RELEASE -f value=${{ env.tag }}
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
