add arm linux images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   gandidynamicdns:
-    build: .
+    build: ./linux64
     restart: no
     volumes:
       - ./appsettings.json:/app/appsettings.json
