--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout this repository
       uses: actions/checkout@v2
@@ -29,14 +28,36 @@ jobs:
           exit 0
         fi  
 
-    - name: Build and push Docker image
+    - name: Build and push linux64 Docker image
       if: env.LAST_RELEASE == env.tag
       run: |
-        docker build -t d0mmi/gandidynamicdns:${{ env.tag }} .
+        docker build -t d0mmi/gandidynamicdns:${{ env.tag }} ./linux64
+        docker tag d0mmi/gandidynamicdns:${{ env.tag }} d0mmi/gandidynamicdns:${{ env.tag }}-linux64
+        docker tag d0mmi/gandidynamicdns:${{ env.tag }} d0mmi/gandidynamicdns:latest-linux64
         docker tag d0mmi/gandidynamicdns:${{ env.tag }} d0mmi/gandidynamicdns:latest
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
         docker push d0mmi/gandidynamicdns:${{ env.tag }}
+        docker push d0mmi/gandidynamicdns:${{ env.tag }}-linux64
+        docker push d0mmi/gandidynamicdns:latest-linux64
         docker push d0mmi/gandidynamicdns:latest
+
+    - name: Build and push arm Docker image
+      if: env.LAST_RELEASE == env.tag
+      run: |
+        docker build -t d0mmi/gandidynamicdns:${{ env.tag }}-arm ./arm
+        docker tag d0mmi/gandidynamicdns:${{ env.tag }}-arm d0mmi/gandidynamicdns:latest-arm
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        docker push d0mmi/gandidynamicdns:${{ env.tag }}-arm
+        docker push d0mmi/gandidynamicdns:latest-arm
+
+    - name: Build and push arm64 Docker image
+      if: env.LAST_RELEASE == env.tag
+      run: |
+        docker build -t d0mmi/gandidynamicdns:${{ env.tag }}-arm64 ./arm64
+        docker tag d0mmi/gandidynamicdns:${{ env.tag }}-arm64 d0mmi/gandidynamicdns:latest-arm64
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        docker push d0mmi/gandidynamicdns:${{ env.tag }}-arm64
+        docker push d0mmi/gandidynamicdns:latest-arm64
     
     - name: Update LAST_RELEASE variable
       if: env.LAST_RELEASE == env.tag
