--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -48,7 +48,7 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
   build-arm:
-    runs-on: ubuntu-24.04-arm
+    runs-on: macos-latest
     steps:
     - name: Checkout this repository
       uses: actions/checkout@v2
