--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Get latest release tag from Aldaviva/GandiDynamicDns
       id: get_release
       run: |
-        latest_release=$(curl -s https://api.github.com/repos/Aldaviva/GandiDynamicDns/releases/latest | jq -r .tag_name)
+        latest_release=$(curl -s https://api.github.com/repos/Aldaviva/GandiDynamicDns/releases/latest | grep '"tag_name":' | sed -E 's/.*"tag_name": "([^"]+)".*/\1/')
         echo "tag=$latest_release" >> $GITHUB_ENV
 
     - name: Check if the release is new
